tests/integrations/basic/tests/actual_tests/foomp.rs
use basic::add;

fn main() {
    //
    add("42", 3);
    //~^ ERROR: mismatched types
}
